--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
 		"lint:write": "biome lint --write",
 		"check": "biome check",
 		"check:write": "biome check --write",
-		"build": "tsc && cp -r src/index.html src/assets src/styles.css dist && cp CNAME dist/CNAME"
+		"build": "tsc && cp -r src/index.html src/assets src/styles.css dist && cp CNAME dist/CNAME",
+		"predeploy": "pnpm run build",
+		"deploy": "gh-pages -d dist"
 	},
 	"keywords": [],
 	"author": "Bradley Watson",
 	"license": "ISC",
-	"packageManager": "pnpm@10.28.2",
+	"packageManager": "pnpm@10.29.1+sha512.48dae233635a645768a3028d19545cacc1688639eeb1f3734e42d6d6b971afbf22aa1ac9af52a173d9c3a20c15857cfa400f19994d79a2f626fcc73fccda9bbc",
 	"devDependencies": {
-		"@biomejs/biome": "2.3.14"
+		"@biomejs/biome": "2.3.14",
+		"gh-pages": "^6.3.0"
 	}
 }
